imports fonts for tailwinds styling

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="A Student portfolio site, created with React and hosted on github pages"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Fira+Sans:ital,wght@0,100;0,300;0,400;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
 
 
     <title>Who Is BekahThe.Dev?</title>
